--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>My First Website</title>
+        <meta name="author" content="Arbe Pentz">
+        <title>Gwen Stacy | Webmaster</title>
     </head>
     <body>
-       Hello, World, and welcome to my first website!
+        <p>Hello, World, and welcome to my first website!</p>
+        <p>I'll be adding new content to this site over the next few months! Please come back soon!</p>
     </body>
 </html>
