--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <!-- Add the image "patricia-frost-125-edited-medium.jpg" right before the opening <ul> tag of the nav. Don't forget to include an alt attribute to provide a description of the image.-->
             <img src="images/patricia-frost-125-edited-medium.jpg" alt="patricia frost portrait"><br>
                 <ul>
-                    <li><a href="letter-markup">Letter Markup</a></li>
+                    <li><a href="letter-markup/index.html">Letter Markup</a></li>
                     <li><a href="planets-table">Planets Table</a></li>
                     <li><a href="wanted-poster">Wanted Poster</a></li>
                     <li><a href="school-site">School Site</a></li>
